--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
   mongo:
     image: mongo
     restart: always
+    volumes:
+     - ./data/db:/data/db
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: example
@@ -22,9 +24,9 @@ services:
 
   web:
     build: ./server
-    command: python3 manage.py runserver 0.0.0.0:8000
+    command: python3 /code/manage.py runserver 0.0.0.0:8000
     volumes:
-      - ./server/wtp:/code
+     - ./server/wtp:/code
     ports:
       - "8000:8000"
     depends_on:
