--- a/server/docker/django/Dockerfile
+++ b/server/docker/django/Dockerfile
@@ -2,6 +2,7 @@
 FROM python:3.9
 ENV PYTHONUNBUFFERED=1
 WORKDIR /code
-COPY wtp/requirements.txt ./
+COPY ./requirements.txt ./
 RUN pip install -r requirements.txt
-
+COPY ./entrypoint.sh /
+ENTRYPOINT ["sh", "/entrypoint.sh"]
