add stylelint dev dependency

--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "tutoring-web-platform",
+	"name": "skeeelled",
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
@@ -39,5 +39,9 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
+	},
+	"devDependencies": {
+		"stylelint": "^14.1.0",
+		"stylelint-config-standard": "^24.0.0"
 	}
 }
