--- a/client/package.json
+++ b/client/package.json
@@ -42,7 +42,9 @@
 		]
 	},
 	"devDependencies": {
+		"postcss": "8",
 		"stylelint": "^14.1.0",
-		"stylelint-config-standard": "^24.0.0"
+		"stylelint-config-standard": "^24.0.0",
+		"stylelint-config-standard-scss": "^3.0.0"
 	}
 }
