--- a/server/docker/nginx/nginx.conf
+++ b/server/docker/nginx/nginx.conf
@@ -1,11 +1,11 @@
-upstream django {
+upstream fastapi {
     server web:8000;
 }
 
 server {
     listen 80;
     location / {
-        proxy_pass http://django;
+        proxy_pass http://fastapi;
     }
 
     location /static/ {
