--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -1,12 +1,9 @@
 name: Lint
 
 on:
-  # Trigger the workflow on push or pull request,
-  # but only for the main branches
   push:
     branches:
       - master
-      - main
 
 jobs:
   run-client-linters:
@@ -29,7 +26,7 @@ jobs:
           node-version: 17
 
       - name: Install Node.js dependencies
-        run: yarn install
+        run: npm install
 
       - name: Set up git credentials
         run: |
