--- a/client/package.json
+++ b/client/package.json
@@ -8,8 +8,8 @@
 		"@testing-library/react": "^11.1.0",
 		"@testing-library/user-event": "^12.1.10",
 		"bootstrap": "4.6.0",
-		"html-react-parser": "^1.4.1",
 		"eslint-plugin-only-warn": "^1.0.3",
+		"html-react-parser": "^1.4.1",
 		"react": "^17.0.2",
 		"react-bootstrap": "^2.0.2",
 		"react-dom": "^17.0.2",
@@ -20,7 +20,10 @@
 	},
 	"scripts": {
 		"start": "react-scripts start",
-		"build": "react-scripts build",
+		"build": "env-cmd -f .env.development react-scripts build",
+		"build:staging": "env-cmd -f .env.staging react-scripts build",
+		"predeploy": "npm run build:staging",
+		"deploy": "gh-pages -d build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
 	},
@@ -43,6 +46,8 @@
 		]
 	},
 	"devDependencies": {
+		"env-cmd": "^10.1.0",
+		"gh-pages": "^3.2.3",
 		"postcss": "8",
 		"stylelint": "^14.1.0",
 		"stylelint-config-standard": "^24.0.0",
