first model definitions and test post request

--- a/server/docker/nginx/nginx.conf
+++ b/server/docker/nginx/nginx.conf
@@ -5,7 +5,7 @@ upstream fastapi {
 server {
     listen 80;
     location / {
-        proxy_pass http://fastapi;
+        proxy_pass http://fastapi/;
     }
 
     location /static/ {
