--- a/client/docker/node/Dockerfile
+++ b/client/docker/node/Dockerfile
@@ -8,7 +8,7 @@ WORKDIR /app
 ENV PATH /app/node_modules/.bin:$PATH
 
 # install app dependencies
-COPY ./client/package.json ./
+COPY package.json ./
 RUN npm install --silent
 RUN npm install react-scripts@3.4.1 -g --silent
 
