--- a/client/package.json
+++ b/client/package.json
@@ -7,11 +7,11 @@
 		"@testing-library/jest-dom": "^5.11.4",
 		"@testing-library/react": "^11.1.0",
 		"@testing-library/user-event": "^12.1.10",
-		"bootstrap": "4.6.0",
+		"bootstrap": "^5.1.3",
 		"eslint-plugin-only-warn": "^1.0.3",
 		"html-react-parser": "^1.4.1",
 		"react": "^17.0.2",
-		"react-bootstrap": "^1.6.4",
+		"react-bootstrap": "^2.2.1",
 		"react-dom": "^17.0.2",
 		"react-router-dom": "^6.0.1",
 		"react-scripts": "4.0.3",
