--- a/client/package.json
+++ b/client/package.json
@@ -10,11 +10,18 @@
 		"bootstrap": "4.6.0",
 		"eslint-plugin-only-warn": "^1.0.3",
 		"html-react-parser": "^1.4.1",
+		"katex": "^0.15.3",
 		"react": "^17.0.2",
 		"react-bootstrap": "^1.6.4",
 		"react-dom": "^17.0.2",
+		"react-markdown": "^8.0.2",
+		"react-mde": "^11.5.0",
 		"react-router-dom": "^6.0.1",
 		"react-scripts": "4.0.3",
+		"rehype": "^12.0.1",
+		"rehype-katex": "^6.0.2",
+		"remark-gfm": "^3.0.1",
+		"remark-math": "^5.1.1",
 		"sass": "^1.43.4",
 		"web-vitals": "^1.0.1"
 	},
