--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
 		"katex": "^0.15.3",
 		"react": "^17.0.2",
 		"react-bootstrap": "^1.6.4",
+		"react-bootstrap-typeahead": "^6.0.0-alpha.11",
 		"react-dom": "^17.0.2",
 		"react-markdown": "^8.0.2",
 		"react-mde": "^11.5.0",
