--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
 	"private": true,
 	"dependencies": {
 		"@reach/router": "^1.3.4",
+		"@sahircansurmeli/react-mde": "^11.7.0",
 		"@testing-library/jest-dom": "^5.11.4",
 		"@testing-library/react": "^11.1.0",
 		"@testing-library/user-event": "^12.1.10",
@@ -16,7 +17,6 @@
 		"react-bootstrap-typeahead": "^6.0.0-alpha.11",
 		"react-dom": "^17.0.2",
 		"react-markdown": "^8.0.2",
-		"react-mde": "^11.5.0",
 		"react-router-dom": "^6.0.1",
 		"react-scripts": "4.0.3",
 		"rehype": "^12.0.1",
