--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
 		"react-router-dom": "^6.0.1",
 		"react-scripts": "4.0.3",
 		"rehype": "^12.0.1",
+		"rehype-highlight": "^5.0.2",
 		"rehype-katex": "^6.0.2",
 		"remark-gfm": "^3.0.1",
 		"remark-math": "^5.1.1",
