--- a/client/package.json
+++ b/client/package.json
@@ -12,10 +12,11 @@
 		"html-react-parser": "^1.4.1",
 		"katex": "^0.15.3",
 		"react": "^17.0.2",
-		"react-bootstrap-typeahead": "^6.0.0-alpha.11",
 		"react-bootstrap": "^2.2.1",
+		"react-bootstrap-typeahead": "^6.0.0-alpha.11",
 		"react-dom": "^17.0.2",
 		"react-markdown": "^8.0.2",
+		"react-mde": "^11.5.0",
 		"react-router-dom": "^6.0.1",
 		"react-scripts": "4.0.3",
 		"rehype": "^12.0.1",
