--- a/server/docker/FastAPI/Dockerfile
+++ b/server/docker/FastAPI/Dockerfile
@@ -1,8 +1,8 @@
 # syntax=docker/dockerfile:1
-FROM python:3.9
+FROM python:3.9-slim-buster
 ENV PYTHONUNBUFFERED=1
 WORKDIR /code
-COPY ./fastAPI/requirements.txt ./
+COPY ./src/requirements.txt ./
 RUN pip install -r requirements.txt
-COPY ./docker/fastAPI/entrypoint.sh /
+COPY ./docker/FastAPI/entrypoint.sh /
 ENTRYPOINT ["sh", "/entrypoint.sh"]
