remove unnecessary extra specifications in client Dockerfile

--- a/client/docker/node/Dockerfile
+++ b/client/docker/node/Dockerfile
@@ -8,12 +8,7 @@ WORKDIR /app
 ENV PATH /app/node_modules/.bin:$PATH
 
 # install app dependencies
-COPY package.json ./
-RUN npm install --silent
-RUN npm install react-scripts@3.4.1 -g --silent
+RUN npm install
 
-# add app
-#COPY . ./
-
-# start app
+# start app (already in docker-compose.yml)
 #CMD ["npm", "start"]
