--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-# Use root/example as user/password credentials
 version: '3.1'
 
 services:
@@ -17,7 +16,7 @@ services:
   # development only dashboard for easily checking db changes
   mongo-express:
     image: mongo-express:1.0.0-alpha.4
-    restart: on-failure
+    restart: always
     ports:
       - "8081:8081"
     environment:
