test data are automatically generated at server container startup
the volumes mounted in the docker-compose file are only available at runtime, so we delay the data generation from build time

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,8 @@ services:
       context: ./server
       dockerfile: docker/FastAPI/Dockerfile
     volumes:
-      - ./server/src:/code
+      - ./server/src:/src
+      - ./server/test_data_base:/test_data_base
     ports:
       - "8000:8000"
     depends_on:
