--- a/server/docker/FastAPI/Dockerfile
+++ b/server/docker/FastAPI/Dockerfile
@@ -3,9 +3,10 @@ FROM python:3.9-slim-buster
 
 ENV PYTHONUNBUFFERED=1
 
-WORKDIR /code
+WORKDIR /src
 COPY ./requirements.txt ./
-RUN pip install -r requirements.txt
 COPY ./docker/FastAPI/entrypoint.sh /
+
+RUN pip install -r requirements.txt
 
 ENTRYPOINT ["sh", "/entrypoint.sh"]
