fix: client container now correctly installs dependencies at build time. ref #108

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,7 +56,8 @@ services:
       context: ./client
       dockerfile: docker/node/Dockerfile
     volumes:
-      - ./client:/app
+      - ./client/public:/app/public
+      - ./client/src:/app/src
     command: ["npm", "start"]
     ports:
       - "3000:3000"
