--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,7 @@
     "react-bootstrap-typeahead": "^6.0.0-alpha.11",
     "react-dom": "^17.0.2",
     "react-markdown": "^8.0.2",
-    "react-python-editor": "^1.0.6",
+    "react-python-editor": "~1.2.0",
     "react-router-dom": "^6.0.1",
     "react-scripts": "4.0.3",
     "rehype": "^12.0.1",
