--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.1.3",
     "eslint-plugin-only-warn": "^1.0.3",
     "html-react-parser": "^1.4.1",
+    "jimp": "^0.16.1",
     "katex": "^0.15.3",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.1",
