--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "html-react-parser": "^1.4.1",
     "jimp": "^0.16.1",
     "katex": "^0.15.3",
+    "mongodb": "^4.11.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.1",
     "react-bootstrap-typeahead": "^6.0.0-alpha.11",
