--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,18 @@ services:
     depends_on:
       - mongodb
 
+  # Test IdP as a replacement for Shibboleth. DELETE IN PRODUCTION!
+  test-idp:
+    image: quay.io/keycloak/keycloak:20.0.1
+    environment:
+      KEYCLOAK_ADMIN: "admin"
+      KEYCLOAK_ADMIN_PASSWORD: "admin"
+    ports:
+      - "8080:8080"
+    command:
+      - start-dev
+
+
   # FastAPI backend (served by uvicorn in development)
   server:
     build:
@@ -38,16 +50,7 @@ services:
       - "8000:8000"
     depends_on:
       - mongodb
-
-  test-idp:
-    image: quay.io/keycloak/keycloak:20.0.1
-    environment:
-      KEYCLOAK_ADMIN: "admin"
-      KEYCLOAK_ADMIN_PASSWORD: "admin"
-    ports:
-      - "8080:8080"
-    command:
-      - start-dev
+      - test-idp
 
   # web server (acting as a reverse proxy in production)
   nginx:
