--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -4,3 +4,5 @@ motor==2.5.1
 xmltodict==0.12.0
 python3-saml == 1.14.0
 python-multipart == 0.0.5
+itsdangerous == 2.1.2
+starlette-authlib == 0.1.17
