--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -125,4 +125,4 @@ networks:
       driver: default
       config:
         - subnet: 172.19.0.0/16
-        - gateway: 172.19.0.1
+          gateway: 172.19.0.1
