--- a/server/docker/nginx/nginx.conf
+++ b/server/docker/nginx/nginx.conf
@@ -4,11 +4,16 @@ upstream fastapi {
 
 server {
     listen 80;
+
     location / {
         proxy_pass http://fastapi/;
     }
 
     location /static/ {
-        alias /static/;
+        alias /server/static/;
+    }
+
+    location /media/ {
+        alias /server/media/;
     }
 }
