--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "rehype": "^12.0.1",
     "rehype-highlight": "^5.0.2",
     "rehype-katex": "^6.0.2",
+    "rehype-raw": "^6.1.1",
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
     "web-vitals": "^1.0.1"
