--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "better-react-mathjax": "^2.0.2",
     "bootstrap": "^5.1.3",
     "eslint-plugin-only-warn": "^1.0.3",
     "html-react-parser": "^1.4.14",
